# vollcrypt

./: .env.example  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  README-db-proxy.md  README-desktop.md  README-files.md  README-messages.md  README-wave.md  README.md  SECURITY.md  SECURITY_DESIGN.md  SECURITY_DESING.md  build_error.txt  clippy_out.txt  clippy_output.txt  diff_output.txt  index.d.ts  index.js  index.win32-x64-msvc.node  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci-desktop.yml  ci-files.yml  ci-messages.yml  ci.yml  deploy-pages.yml  release-desktop.yml  release-files.yml  release-messages.yml  release.yml
_layouts/: default.html
assets/css/: style.scss
core/: Cargo.toml
core/src/: bip39.rs  envelope.rs  kdf.rs  key_log.rs  keys.rs  lib.rs  padding.rs  pqc.rs  ratchet.rs  sealed_sender.rs  symmetric.rs  wrap.rs
core/src/tests/adversarial/: mod.rs  test_envelope.rs  test_kdf.rs  test_key_log.rs  test_panic_safety.rs  test_pqc.rs  test_ratchet.rs  test_sealed_sender.rs
db-guard/: FIPS_VALIDATION.md
db-guard/node/: README.md  compliance-config.json  package-lock.json  package.json  vollcrypt-db-guard-0.9.0.tgz
db-guard/rust/: Cargo.toml
db-guard/rust/src/: diesel_impl.rs  lib.rs  pkcs11_impl.rs  seaorm_impl.rs
db-guard/rust/tests/: diesel_tests.rs  pkcs11_tests.rs  seaorm_tests.rs
db-proxy/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vollcrypt-db-proxy-0.9.0.tgz
db-proxy/logs/: siem.cef
db-proxy/src/: anomaly.ts  auth.ts  dlp.ts  index.ts  mpc.ts  pg-protocol.ts  proxy.ts  waf.ts
db-proxy/tests/: proxy.test.ts
node/: Cargo.toml  README.md  package.json
node/src/: lib.rs
reports/: ADVERSARIAL_REPORT.md
src/license/: index.ts  tracker.ts  types.ts
vollcrypt-desktop/: License.rtf  License.txt  index.html  package-lock.json  package.json
vollcrypt-desktop/src/: App.css  App.tsx
vollcrypt-desktop/src-tauri/: Cargo.toml  tauri.conf.json
vollcrypt-example/: README.md  package-lock.json  package.json
vollcrypt-example/src/: 01_keypair.ts  02_encrypt.ts  03_kem.ts  04_auth_kem.ts  05_ratchet.ts  06_transcript.ts  07_sealed.ts  08_keylog.ts  09_full_flow.ts  10_verification.ts
vollcrypt-file/core/: Cargo.toml
vollcrypt-file/core/src/: crypt.rs  error.rs  group.rs  header.rs  kdf.rs  lib.rs  manifest.rs  password.rs  random.rs  recipient.rs  signature.rs  wrap.rs
vollcrypt-file/core/tests/: encrypt_decrypt.rs  end_to_end_eager_revocation.rs  end_to_end_group.rs  end_to_end_password.rs  end_to_end_recipient.rs  end_to_end_resolution.rs  format_roundtrip.rs  group_wrap.rs  header_roundtrip_v2.rs  header_signature.rs  keylog.rs  manifest.rs  merkle.rs  password_wrap.rs  recipient_wrap.rs  rewrap_files.rs  rotation.rs  shred.rs
vollcrypt-files/: DoccA_INTEGRATION.md  GDPR_COMPLIANCE.md  README.md  VOLLSIGN_INTEGRATION.md
vollcrypt-files/.cargo/: config.toml
vollcrypt-files/adversarial/: Cargo.toml
vollcrypt-files/adversarial/src/: main.rs
vollcrypt-files/bench/: Cargo.toml
vollcrypt-files/bench/benches/: comparison.rs  file_size.rs  hybrid_kem.rs  kdf.rs  parallel.rs  scaling.rs  single_core.rs
vollcrypt-files/bench/results/: parallel.json  single_core.json
vollcrypt-files/bench/results/12th_gen_intel_r_core_tm_i5-12450h/: parallel.json  single_core.json
vollcrypt-files/bench/results/amd_ryzen_5_7500f_6-core_processor/: parallel.json  single_core.json
vollcrypt-files/bench/results/intel-i5-12450h/: parallel.json  single_core.json
vollcrypt-files/bench/results/intel_r_core_tm_i3-7100u_cpu_2_40ghz/: parallel.json  single_core.json
vollcrypt-files/bench/results/intel_r_core_tm_i7-8565u_cpu_1_80ghz/: parallel.json  single_core.json
vollcrypt-files/bench/results/ryzen-5-7500f/: parallel.json
vollcrypt-files/bench/scripts/: quick.sh  run_all.sh
vollcrypt-files/bench/src/: hwinfo.rs  lib.rs
vollcrypt-files/core/: Cargo.toml
vollcrypt-files/core/src/: aead.rs  archive.rs  buffer_pool.rs  chunk.rs  constants.rs  crypt.rs  error.rs  group.rs  header.rs  hybrid_sig.rs  kdf.rs  keylog.rs  keywrap.rs  lib.rs  manifest.rs  merkle.rs  mldsa.rs  password.rs  pipelined_io.rs  pqc.rs  provider.rs  random.rs  recipient.rs  resolver.rs  shield.rs  signature.rs  signing.rs  sovereign.rs  threshold.rs  web_crypto.rs  wrap.rs  writer.rs
vollcrypt-files/core/tests/: encrypt_decrypt.rs  end_to_end_eager_revocation.rs  end_to_end_group.rs  end_to_end_password.rs  end_to_end_recipient.rs  end_to_end_resolution.rs  format_roundtrip.rs  group_wrap.rs  header_roundtrip_v2.rs  header_signature.rs  keylog.rs  manifest.rs  merkle.rs  password_wrap.rs  pipelined_io.rs  recipient_wrap.rs  rewrap_files.rs  rotation.rs  shred.rs  sovereign_shield.rs  threshold_tests.rs
vollcrypt-files/examples/: package-lock.json  package.json
vollcrypt-files/fuzz/: Cargo.toml
vollcrypt-files/fuzz/fuzz_targets/: fuzz_header_parse.rs  fuzz_manifest_parse.rs  fuzz_roundtrip.rs  fuzz_wrap_entry.rs
vollcrypt-files/node/: .npmignore  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  vollcrypt-files-node.win32-x64-msvc.node
vollcrypt-files/node/src/: lib.rs
vollcrypt-files/node/tests/: api.test.ts
vollcrypt-files/reports/: ADVERSARIAL_REPORT.md  BEHAVIORAL_REPORT.md  PERFORMANCE_REPORT.md  SECURITY_AUDIT_REPORT.md  SECURITY_CONSIDERATIONS.md
vollcrypt-files/stress/: Cargo.toml
vollcrypt-files/stress/src/: adversarial.rs  concurrent.rs  edge_cases.rs  lib.rs
vollcrypt-files/wasm/: .npmignore  Cargo.toml  LICENSE  package.json
vollcrypt-files/wasm/pkg/: package.json  vollcrypt_files_wasm.d.ts  vollcrypt_files_wasm.js  vollcrypt_files_wasm_bg.wasm  vollcrypt_files_wasm_bg.wasm.d.ts
vollcrypt-files/wasm/src/: lib.rs  wasm_bridge.rs
vollcrypt-files/wasm/tests/: web.rs
vollcrypt-messages/core/: benchmark_runner.ps1  performance_report.md  performance_report_optimized.md
vollcrypt-messages/node/: .npmignore  (+7 more)
wasm/: Cargo.toml  README.md  fast.d.ts  fast.js  package.json
(+103 files in other folders)
