[workspace]
members = [
    "vollcrypt-messages/core",
    "vollcrypt-messages/node",
    "vollcrypt-messages/wasm",
    "vollcrypt-files/core",
    "vollcrypt-files/node",
    "vollcrypt-files/wasm",
    "vollcrypt-files/bench",
    "vollcrypt-files/stress",
    "vollcrypt-files/adversarial"
]
resolver = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
