[package]
name = "vollcrypt-db-guard"
version = "0.1.0"
edition = "2021"
description = "Database field-level encryption integrations for Vollcrypt"

[dependencies]
aes-gcm = "0.10.3"
hkdf = "0.12.4"
sha2 = "0.10.9"
rand = "0.8.5"
diesel = { version = "2.2.0", default-features = false }
base64 = "0.22"
once_cell = "1.19"
zeroize = "1.8"
libsqlite3-sys = { version = "0.37", features = ["bundled"], optional = true }
sea-orm = { version = "1.1.0", default-features = false, optional = true }
cryptoki = { version = "0.7", optional = true }
secrecy = { version = "0.8.0", optional = true }

[features]
sqlite = ["diesel/sqlite", "dep:libsqlite3-sys"]
postgres = ["diesel/postgres"]
mysql = ["diesel/mysql"]
sea-orm = ["dep:sea-orm"]
pkcs11 = ["dep:cryptoki", "dep:secrecy"]

[dev-dependencies]
diesel = { version = "2.2.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.37", features = ["bundled"] }
sea-orm = { version = "1.1.0", default-features = false }
