[package]
name = "vollcrypt-file-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
thiserror = "1"
rand = "0.8"
argon2 = "0.5"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
subtle = "2"
aes-kw = { version = "0.2.1", features = ["alloc"] }
pbkdf2 = "0.12.2"
log = "0.4"
