[package]
name = "vollcrypt-files-adversarial"
version = "0.1.0"
edition = "2021"

[dependencies]
vollcrypt-files-core = { path = "../core" }
rand = "0.8"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["fast"] }
argon2 = "0.5"
aes-gcm = "0.10"
x25519-dalek = "2"
ml-kem = "0.2"
subtle = "2"
blake3 = "1"
