[package]
name = "vollcrypt-files-node"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-only OR LicenseRef-Commercial"

[lib]
crate-type = ["cdylib"]

[dependencies]
vollcrypt-files-core = { path = "../core" }
napi = { version = "2", default-features = false, features = ["napi6", "async"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
