[package]
name = "vollcrypt-files-wasm"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-only OR LicenseRef-Commercial"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vollcrypt-files-core = { path = "../core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"


[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
